--- a/UTeam/src/main/resources/application.properties
+++ b/UTeam/src/main/resources/application.properties
@@ -7,3 +7,9 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.sql.init.mode=never
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-request-size=100MB
+spring.data.rest.base-path=/api
+app.jwtSecretKey=uTeam
+app.jwtExpireInMilSec=8640000000000000
+spring.data.rest.max-page-size=100
