--- a/UTeam/src/main/resources/application.properties
+++ b/UTeam/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-request-size=100MB
+spring.servlet.multipart.max-file-size=100MB
 spring.data.rest.base-path=/api
 app.jwtSecretKey=uTeam
 app.jwtExpireInMilSec=8640000000000000
